error/test_3.txt
  File "/data/groups/classes/2024/fall/cs426/group_5/SchSearch/scholarly-search/./py_code/experiment_1.py", line 113
    prompts = file.readlines()A
                              ^
SyntaxError: invalid syntax
